# DocsGuard-

./: .gitignore  LICENSE  README.md  Readme.md  SPEC.md  docguard-v1-phases.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish-pypi.yml
docguard_bootstrap/: __init__.py  cli.py
docs/: explainer.md
src/: index.ts
src/bypass/: env.ts  log.ts
src/cli/: index.ts
src/cli/commands/: check.ts  init.ts  uninstall.ts
src/config/: defaults.ts  load.ts  schema.ts
src/docs/: chunk.ts  load.ts  parse-markdown.ts
src/embeddings/: cache.ts  embed.ts
src/git/: install-hook.ts  staged-diff.ts  staged-files.ts  uninstall-hook.ts
src/grading/: apply-severity.ts
src/llm/: groq.ts  provider.ts
src/llm/prompts/: semantic.ts
src/report/: format.ts  print.ts
src/retrieval/: cosine.ts  path-boost.ts  rank.ts
src/rules/semantic/: run.ts  validate-response.ts
src/types/: diff.ts  docs.ts  result.ts
src/utils/: dotenv.ts  errors.ts  logger.ts  paths.ts
templates/: .docguard.json  pre-commit
tests/config/: dotenv.test.ts  load.test.ts
tests/docs/: chunk.test.ts
tests/git/: hooks.test.ts  staged.test.ts
tests/grading/: apply-severity.test.ts
tests/llm/: validate-response.test.ts
tests/retrieval/: cosine.test.ts  rank.test.ts
